Updated content, remove projects

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,6 @@
 mainSections:
-  - posts
-description: Eureka is a elegant and powerful theme for Hugo.
+  - projects
+description: My little corner of the internet.
 
 repoEditURL:
 
