--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Hugo setup
+      - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2.4.13
         with:
           hugo-version: 'latest'
