--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,4 +1,4 @@
-main:
-  - name: About
-    url: '#about'
-    weight: 1
+# main:
+#   # - name: Projects
+#   #   url: '/projects'
+#   #   weight: 1
