Added google analytics to config.yaml

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -17,7 +17,7 @@ hasCJKLanguage: false # Set `true` for Chinese/Japanese/Korean.
 defaultContentLanguageInSubdir: false
 
 # Uncomment for google analytics
-# googleAnalytics: UA-123-45
+googleAnalytics: G-CPQVFYK3P0
 
 markup:
   # Do not modify markup.highlight
