--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/eureka"]
 	path = themes/eureka
 	url = https://github.com/wangchucheng/hugo-eureka.git
+[submodule "themes/shell"]
+	path = themes/shell
+	url = https://github.com/Yukuro/hugo-theme-shell
