--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,8 @@ title = 'Maximilian Britton'
   # Note: hugo-theme-shell original: ["shell-powershell", "shell-ubuntu", "shell-retro"]
   # Note: or
   # Note: gogh theme: https://mayccoll.github.io/Gogh/
-  scheme = "Molokai"
+  # gooey Molokai SeaShells
+  scheme = "gooey"
 
   # Note: in terminal
   # [userName]@[pcName]:~/$ cd [workDir]
